# MOUSART

./: .gitignore  CMakeLists.txt  MOUSART.desktop  Makefile  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-TW.md  pyinstaller.spec  pyproject.toml  qml.qrc
cmake/: mingw-w64-toolchain.cmake
debian/: changelog  control  copyright  mouserial.postinst.debhelper  mouserial.prerm.debhelper  rules
mousart/: __init__.py  __main__.py  app.py  qt_compat.py
mousart/core/: config_manager.py  data_analyzer.py  log_file_manager.py  serial_manager.py  theme_manager.py  virtual_serial_manager.py
mousart/ui/: data_panel.py  main_window.py  settings_panel.py  title_bar.py
mousart/ui/dialogs/: permission_dialog.py  waveform_dialog.py
mousart/ui/widgets/: action_button.py  auto_reply_panel.py  (+9 more)
mousart/utils/: checksum.py  constants.py  encoding.py  hex_display.py  modbus.py  number_convert.py  stylesheet.py
qml/: DataPanel.qml  SettingsPanel.qml  TitleBar.qml  main.qml
qml/components/: ActionButton.qml  AutoReplyPanel.qml  DataStatsBar.qml  EditableComboBox.qml  ModeButton.qml  PinControlBar.qml  QuickCommandBar.qml  SmallButton.qml  SmallToggle.qml  StyledComboBox.qml  WindowButton.qml
release/: mouserial_2.0.0-1_amd64.deb  mouserial_3.0.0-1_amd64.deb  mouserial_3.1.0-1_all.deb
release/MOUSART-v1.0.0/: LICENSE  MOUSART
scripts/: build_deb.sh  build_exe.sh  build_icons.sh
src/: main.cpp
src/core/: configmanager.cpp  configmanager.h  dataanalyzer.cpp  dataanalyzer.h  logfilemanager.cpp  logfilemanager.h  serialportmanager.cpp  serialportmanager.h  thememanager.cpp  thememanager.h  virtualserialmanager.cpp  virtualserialmanager.h
