[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mouserial"
version = "3.1.0"
description = "MOUSART - Full-featured Serial Port Debugging Tool"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "kryntx"}]
dependencies = [
    "PyQt6>=6.4",
    "pyserial>=3.5",
]

[project.gui-scripts]
mousart = "mousart.app:main"

[tool.setuptools.packages.find]
include = ["mousart*"]
